--- a/me/styles.css
+++ b/me/styles.css
@@ -14,6 +14,7 @@ main{
 footer{
     font-weight: bold;
     text-align: center;
+    margin-top: 10px;
 }
 a:hover{
     cursor: pointer;
@@ -49,9 +50,18 @@ p{
     margin: 50px 20px;
     text-align: left;
 }
-#listFacts li h2{
+h2{
     font-size: 30px;
 }
 #listFacts{
     font-size: 30px;
+}
+#mainPageIndex{
+    list-style-type:none;
+    margin: 0px;
+    padding: 0px;
+}
+li{
+    font-size: 1.2em;
+    margin: 0px 0px 15px 0px;
 }
